doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/Sonali/Desktop/APCS/Koch/gpdraw.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/Sonali/Downloads/BlueJ 4.1.0/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/Sonali/Desktop/A6
-d
/Users/Sonali/Desktop/A6/doc
-encoding
UTF-8
-charset
UTF-8
/Users/Sonali/Desktop/A6/Recursive.java
<---- end of javadoc command ---->
Loading source file /Users/Sonali/Desktop/A6/Recursive.java...
/Users/Sonali/Desktop/A6/Recursive.java:416: error: '{' expected
    private static class Tiles(char[][] rawMaze){
                              ^
/Users/Sonali/Desktop/A6/Recursive.java:416: error: ';' expected
    private static class Tiles(char[][] rawMaze){
                                               ^
/Users/Sonali/Desktop/A6/Recursive.java:417: error: illegal start of expression
        public Tiles(char[][] rawMaze){
        ^
/Users/Sonali/Desktop/A6/Recursive.java:417: error: '.class' expected
        public Tiles(char[][] rawMaze){
                              ^
/Users/Sonali/Desktop/A6/Recursive.java:417: error: ';' expected
        public Tiles(char[][] rawMaze){
                                     ^
/Users/Sonali/Desktop/A6/Recursive.java:421: error: reached end of file while parsing
}
 ^
6 errors
